# Byonoy---GUI

./: .gitignore  README.md
Byonoy-GUI/: CMakeLists.txt  Design1.qml  Design1_1.qml  Design2.qml  Main.qml  interface.cpp  interface.h  main.cpp
